# rhylthyme-web

./: .gitignore  LICENSE  README.md  comprehensive_manual_demo_static.html  generate_dags.py  manual_controls_demo_static.html  pyproject.toml  requirements.txt  web_academy_awards.html  web_academy_awards_dynamic_duration.html  web_academy_awards_with_duration.html  web_academy_awards_with_program_duration.html  web_flex_test.html  web_flex_test_dynamic_duration.html  web_flex_test_no_duration.html
api/: index.py
dag_outputs/: academy_awards_ceremony.html  airport_batch_example.html  airport_program_example.html  bakery_program_example.html  breakfast_from_tracks.html  breakfast_schedule.html  breakfast_with_buffers.html  breakfast_with_environment.html  buffer_example.html  cell_culture_experiment.html  drug_screening_from_tracks.html  go_around_example.html  lab_experiment.html  multi_resource_example.html  optimal_duration_example.html  protein_lysate_immunoblotting.html  rat_psychopharmacology.html  resource_contention_example.html  restaurant_breakfast.html  staggered_batch_example.html  test_offset_example.html  test_overutilization.html  time_format_stagger_example.html  variable_substitution_example.html
docs/: PATTERNFLY_INTEGRATION.md
examples/: academy_awards_ceremony.json  airport_batch_example.json  airport_program_example.json  bakery_program_example.json  breakfast_from_tracks.json  breakfast_schedule.json  breakfast_with_buffers.json  breakfast_with_environment.json  buffer_example.json  cell_culture_experiment.json  drug_screening_from_tracks.json  lab_experiment.json  multi_resource_example.json  protein_lysate_immunoblotting.json  rat_psychopharmacology.json  (+3 more)
static/: redirect.html
(+11 files in other folders)
